# low_latency_cpp_patterns

./: MODULE.bazel  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: BUILD  single_consumer_single_producer.cpp
