###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "low_latency_cpp_patterns",
    version = "1.0.0",
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "boost.circular_buffer", version = "1.87.0")
bazel_dep(name = "spdlog", version = "1.15.2")

# Register C++ toolchains
register_toolchains("@bazel_tools//tools/cpp:all")
